Scaffold base logic
