# Server/Controllers/OtpController.cs
@@ -1,11 +1,31 @@
 
 
+using DarkPatterns.OneTimePassword.Delivery;
+using DarkPatterns.OneTimePassword.Logic;
+using DarkPatterns.OneTimePassword.Persistence;
+
 namespace DarkPatterns.OneTimePassword.Controllers;
 
-public class OtpController : OtpControllerBase
+public class OtpController(
+	IDeliveryMethodFactory deliveryMethodFactory,
+	IOtpGenerator otpGenerator,
+	OtpDbContext db
+) : OtpControllerBase
 {
-	protected override Task<SendOtpActionResult> SendOtp(SendOtpRequest sendOtpBody)
+	protected override async Task<SendOtpActionResult> SendOtp(SendOtpRequest sendOtpBody)
 	{
-		return Task.FromResult(SendOtpActionResult.BadRequest());
+		// TODO: get API Key details for otp persistence configuration
+		var deliveryMethod = deliveryMethodFactory.Create(sendOtpBody.Medium);
+		if (!deliveryMethod.IsValidDestination(sendOtpBody.Destination))
+			return SendOtpActionResult.BadRequest();
+
+		var otp = otpGenerator.GenerateOtp();
+		var success = await deliveryMethod.SendOtpAsync(sendOtpBody.Destination, otp);
+		if (!success)
+			return SendOtpActionResult.BadRequest();
+
+		await db.PersistOtpAsync(sendOtpBody.Medium, sendOtpBody.Destination, otp);
+
+		return SendOtpActionResult.Created();
 	}
 }
