# Server/Delivery/IDeliveryMethod.cs
@@ -1,0 +1,8 @@
+
+namespace DarkPatterns.OneTimePassword.Delivery;
+
+public interface IDeliveryMethod
+{
+	bool IsValidDestination(string destination);
+	Task<bool> SendOtpAsync(string destination, string otp);
+}
