# Server/Delivery/IDeliveryMethodFactory.cs
@@ -1,0 +1,9 @@
+using DarkPatterns.OneTimePassword.Controllers;
+using DarkPatterns.OpenApiCodegen.Json.Extensions;
+
+namespace DarkPatterns.OneTimePassword.Delivery;
+
+public interface IDeliveryMethodFactory
+{
+	IDeliveryMethod Create(Medium medium);
+}
